2004-11-09  Mark D. Baushke  <mdb@cvshome.org>

	* strftime.c: Update from GNULIB.

2004-11-05  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "readlink.c" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-05  Mark D. Baushke  <mdb@cvshome.org>

	* readlink.c: Update from GNULIB.

2004-11-04  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "xreadlink.c" and "xreadlink.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>

	* allocsa.h, allocsa.valgrind: Update from GNULIB.
	* Makefile.in: Regenerated.

2004-11-04  Mark D. Baushke  <mdb@cvshome.org>

	* sunos57-select.c: Move '#undef select' before system #include
	statements to avoid conflicting declarations on BSDI BSD/OS 4.2.
	
2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am: Update from GNULIB.
	* readlink.c, xreadlink.c, xreadlink.h: Add from GNULIB.
	* Makefile.gnulib, Makefile.in: Regenerated.

2004-11-03  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* getpass.c, setenv.h: Update from GNULIB.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* test-getdate.sh (getdate): Do not assume 'diff -u' is
	universally available.
	* Makefile.am (getdate_SOURCES): Add allocsa.c sources needed by
	getdate on Solaris.
	* Makefile.in: Regenerated.

2004-11-01  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "setenv.c", "unsetenv.c", "allocsa.h" and "setenv.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* test-getdate.sh: Test a date relative to a specified date and one of
	the failing dates from the rcs2-7 test in src/sanity.sh.

2004-11-01  Derek Price  <derek@ximbiot.com>

	* Makefile.am (TESTS): Add test-getdate.sh.